--- a/components/main.less
+++ b/components/main.less
@@ -93,7 +93,8 @@
     }
     &-header{
         height: 60px;
-        background: #fff;
+        //background: #fff;
+        background-image: url("~assets/images/agri.jpg");
         box-shadow: 0 2px 1px 1px rgba(100,100,100,.1);
         position: relative;
         z-index: 11;
